# src/routes/userRouter.js
@@ -4,6 +4,7 @@ const userController = require('../controllers/userController.js');
 const router = express.Router();
 
 router.post('/users', userController.createUser);
+router.post('/login', userController.loginUser);
 router.get('/users', userController.getAllUsers);
 router.get('/users/:userId', userController.getUserById);
 router.put('/users/:userId', userController.updateUser);
