# src/swagger.yaml
@@ -6,6 +6,51 @@ info:
 servers:
   - url: http://localhost:8080/api
 paths:
+  /login:
+    post:
+      summary: User login
+      description: Authenticate a user and return a JWT token
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+                  format: password
+              required:
+                - email
+                - password
+      responses:
+        '200':
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  userId:
+                    type: integer
+                  email:
+                    type: string
+                    format: email
+                  jwtToken:
+                    type: string
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
   /users:
     get:
       summary: Returns the list of all users
@@ -112,6 +157,11 @@ paths:
         '500':
           description: Internal server error
 components:
+  securitySchemas:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     User:
       type: object
